Changed capabilities - enabled background modes: Voice over IP and Remote notifications

--- a/DataChannelOrtc.Xamarin/DataChannelOrtc/DataChannelOrtc.iOS/Info.plist
+++ b/DataChannelOrtc.Xamarin/DataChannelOrtc/DataChannelOrtc.iOS/Info.plist
@@ -50,5 +50,10 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>DataChannelOrtc</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>voip</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
