--- a/DataChannelOrtc.Net/DataChannel.Net.csproj
+++ b/DataChannelOrtc.Net/DataChannel.Net.csproj
@@ -124,8 +124,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Signaling\HttpSignaler.cs" />
+    <Compile Include="Signaling\OrtcController.cs" />
+    <Compile Include="Signaling\OrtcControllerEvents.cs" />
     <Compile Include="Signaling\Peer.cs" />
-    <Compile Include="Signaling\Signaler.cs" />
+    <Compile Include="Signaling\HttpSignalerEvents.cs" />
     <Compile Include="Signaling\Util.cs" />
     <EmbeddedResource Include="PeersListForm.resx">
       <DependentUpon>PeersListForm.cs</DependentUpon>
@@ -155,9 +157,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
