--- a/DataChannelOrtc.Net/DataChannel.Net.csproj
+++ b/DataChannelOrtc.Net/DataChannel.Net.csproj
@@ -123,12 +123,6 @@
     <Compile Include="Message.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Signaling\HttpSignaler.cs" />
-    <Compile Include="Signaling\OrtcController.cs" />
-    <Compile Include="Signaling\OrtcControllerEvents.cs" />
-    <Compile Include="Signaling\Peer.cs" />
-    <Compile Include="Signaling\HttpSignalerEvents.cs" />
-    <Compile Include="Signaling\Util.cs" />
     <EmbeddedResource Include="PeersListForm.resx">
       <DependentUpon>PeersListForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -154,6 +148,24 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\HttpSignaler.cs">
+      <Link>HttpSignaler.cs</Link>
+    </Compile>
+    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\HttpSignalerEvents.cs">
+      <Link>HttpSignalerEvents.cs</Link>
+    </Compile>
+    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\OrtcController.cs">
+      <Link>OrtcController.cs</Link>
+    </Compile>
+    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\OrtcControllerEvents.cs">
+      <Link>OrtcControllerEvents.cs</Link>
+    </Compile>
+    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\Peer.cs">
+      <Link>Peer.cs</Link>
+    </Compile>
+    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\Util.cs">
+      <Link>Util.cs</Link>
     </Compile>
   </ItemGroup>
   <ItemGroup>
