--- a/DataChannelOrtc.Net/DataChannel.Net.csproj
+++ b/DataChannelOrtc.Net/DataChannel.Net.csproj
@@ -184,11 +184,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets" Condition="Exists('packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
+    <Error Condition="!Exists('..\packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets'))" />
     <Error Condition="!Exists('packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets'))" />
   </Target>
+  <Import Project="..\packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets" Condition="Exists('..\packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets')" />
+  <Import Project="packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets" Condition="Exists('packages\ORTC.Xamarin.1.62.0.700-Alpha\build\Ortc.Xamarin.targets')" />
 </Project>
