--- a/DataChannelOrtc.Net/DataChannel.Net.csproj
+++ b/DataChannelOrtc.Net/DataChannel.Net.csproj
@@ -149,24 +149,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\HttpSignaler.cs">
-      <Link>HttpSignaler.cs</Link>
-    </Compile>
-    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\HttpSignalerEvents.cs">
-      <Link>HttpSignalerEvents.cs</Link>
-    </Compile>
-    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\OrtcController.cs">
-      <Link>OrtcController.cs</Link>
-    </Compile>
-    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\OrtcControllerEvents.cs">
-      <Link>OrtcControllerEvents.cs</Link>
-    </Compile>
-    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\Peer.cs">
-      <Link>Peer.cs</Link>
-    </Compile>
-    <Compile Include="$(MSBuildThisFileDirectory)..\Signaling\Util.cs">
-      <Link>Util.cs</Link>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -183,7 +165,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DataChannelOrtc.Signaling\DataChannelOrtc.Signaling.csproj">
+      <Project>{6b275c45-1b53-4e85-9f1f-9d277ca977ba}</Project>
+      <Name>DataChannelOrtc.Signaling</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
